--- a/src/PlayingCard.css
+++ b/src/PlayingCard.css
@@ -1,3 +1,19 @@
 .PlayingCard {
   width: 20%;
 }
+
+/* .PlayingCard-Card {
+  width: 226px;
+  height: 314px;
+} */
+
+.PlayingCard-Card img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.PlayingCard-Card-Container {
+  width: 226px;
+  height: 314px;
+}
